stagekubernetes/base/caddyservice.yml
apiVersion: v1
kind: Service
metadata:
  name: caddy-reverse-proxy
spec:
  selector:
    app: caddy-reverse-proxy
  ports:
    - port: 443
      name: https
      targetPort: 443
