stagekubernetes/base/jnlpservice.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
spec:
  selector:
    app: jenkins-server
  ports:
    - port: 50000
