stagekubernetes/base/whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: web
      port: 443
      targetPort: web

  selector:
    app: whoami
