stagekubernetes/base/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: albingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/certificate-arn: 
    alb.ingress.kubernetes.io/group.name: external
spec:
  rules:
    - host: prodtraefik.roelvanstapelreverseproxy.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 443
    - host: prodcaddy.roelvanstapelreverseproxy.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-reverse-proxy
                port:
                  number: 443
