stagekubernetes/base/traefikingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefikingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/issuer: "le-example-http"

spec:
  rules:
    - host: prodtraefik.roelvanstapelreverseproxy.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  jenkins-service
                port:
                  number: 8080
